--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+img/stock-illustration-65041473-lumberjack-in-wood-under-mountain-concept-character-flat-design-landscape.jpg
+img/stock-illustration-2199248-cartoon-castle-at-night-with-stars-and-moon.jpg
+img/0d949de25bb200a14974d8c44f3838e7.jpg
+img/15739101-autumn-landscape-forest-tree-silhouettes-flat-retro-woods.jpg
